<resources>
    <string name="app_name">ExamPap</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_activity_splash_screen">myStrath</string>
    <string name="toolbar_content">Strathmore University</string>
    <string name="home_page_title">Welcome to myStrath</string>
    <string name="title_activity_trial_page">TrialPage</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_details_button">View Details</string>
    <string name="holder_unit_name">Unit Name</string>
    <string name="holder_unit_code">Unit Code</string>
    <string name="apply_now">Apply Now</string>
    <string name="holder_group">holder group</string>
    <string name="holder_day">holder day</string>
    <string name="holder_time">holder time</string>
    <string name="holder_venue">holder venue</string>
    <string name="app_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="app_info">Info</string>
</resources>
